--- a/src/index.html
+++ b/src/index.html
@@ -65,4 +65,9 @@ ngb-carousel .picsum-img-wrapper>img {
   </style>
 </head>
 
+<!-- <head>
+  <style>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
+  </style>
+</head> -->
 <my-app>loading</my-app>
