--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Meow</title>
+  <base href="/">
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism.css" />
